--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,5 @@
 en:
   title: "Welcome to react using react-i18next"
   description:
-    part1: "To get started, edit <1>src/App.js</1> and save to reload."
+    part1: "To get started, edit <1>App.js</1> and save to reload."
     part2: "Switch language between english and german using buttons above."
-    
